tests/ui/issues/issue-23302-enum-infinite-recursion/issue-23302-3.stderr
error[E0391]: cycle detected when simplifying constant for the type system `A`
  --> $DIR/issue-23302-3.rs:1:1
   |
LL | const A: i32 = B;
   | ^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `A`...
  --> $DIR/issue-23302-3.rs:1:16
   |
LL | const A: i32 = B;
   |                ^
note: ...which requires simplifying constant for the type system `B`...
  --> $DIR/issue-23302-3.rs:3:1
   |
LL | const B: i32 = A;
   | ^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `B`...
  --> $DIR/issue-23302-3.rs:3:16
   |
LL | const B: i32 = A;
   |                ^
   = note: ...which again requires simplifying constant for the type system `A`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
